# Data_Correcting_System

./: .gitignore  AGENTS.md  DOCUMENTATION_RULE.md  Pull_cmd.md  README.md
iAgents/: .gitignore  README.md  debug_launch_shadow_assistant.py  launch_shadow_assistant.pyw  pyproject.toml
iAgents/browser_bridge/: content.js  manifest.json  service_worker.js
iAgents/data/seed/config/: agent_team.sample.json
iAgents/data/seed/scenario/: excel_online_shadow_assistant.json
iAgents/data/seed/session/: brief.md
iAgents/develop/: index.md
iAgents/develop/history/snapshot/: README.md
iAgents/develop/plans/2026-03-17-001/: market_release_lines.md  micro_release_lines.md
iAgents/develop/plans/2026-03-18-002/: market_release_lines.md  micro_release_lines.md
iAgents/develop/plans/2026-03-18-003/: market_release_lines.md  micro_release_lines.md
iAgents/develop/plans/2026-03-18-005/: market_release_lines.md  micro_release_lines.md
iAgents/develop/plans/2026-03-19-003/: market_release_lines.md
iAgents/docs/: index.md
iAgents/docs/artifact/: north_star.md  story_release_map.md  system_blueprint.md
iAgents/docs/observability/: current_state.md
iAgents/docs/process/: UX_check_work_flow.md  change_protocol.md  research_operation.md
iAgents/scripts/: create_desktop_shortcut.ps1  diagnose_shadow_assistant.ps1
iAgents/src/iagents/: __init__.py  agent.py  bridge.py  cli.py  desktop_app.py  logic.py  models.py  orchestrator.py  server.py  windows_detect.py
iAgents/src/iagents/web/: app.js  (+2 more)
iAgents/tests/: test_bridge.py  test_logic.py  test_orchestrator.py
(+1168 files in other folders)
